--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@ header {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 10px 0; 
-    padding-right: 100px;
+    padding: left 20px;; 
+    padding-right: 20px;
 } 
 header{
     display: flex;
