--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ header nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: sticky;
   width: 90%;
   z-index: 99;
 }
